--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Shop from "@/components/shop.astro";
 import Layout from "@/layouts/default.astro";
-const data = Astro.locals;
 ---
 
 <Layout>
@@ -23,7 +22,7 @@ const data = Astro.locals;
 						.fill(0)
 						.map(() => (
 							<div class="animate-marquee whitespace-nowrap text-black !text-xl font-bold uppercase tracking-tighter mx-0 w-full">
-								ON VACATION SALE {data.title}
+								ON VACATION SALE
 							</div>
 						))
 				}
