--- a/robo-store-frontend/src/pages/product.astro
+++ b/robo-store-frontend/src/pages/product.astro
@@ -1,5 +1,9 @@
 ---
 import Layout from "@/layouts/default.astro";
+import ProductPage from "@/components/product.svelte";
 ---
 
-<Layout />
+<Layout>
+  <ProductPage client:load />
+  <Layout /></Layout
+>
