--- a/robo-store-frontend/src/pages/cart.astro
+++ b/robo-store-frontend/src/pages/cart.astro
@@ -4,7 +4,7 @@ import CartList from "@/components/cart.svelte";
 ---
 
 <Layout title="Your Cart">
-  <section class="overflow-x-hidden w-screen px-4 mt-5">
+  <section class="overflow-x-hidden w-screen mt-5">
     <div class="select-none">
       <h2
         class="tracking-tight text-center font-bold text-4xl md:text-5xl lg:text-6xl"
