--- a/robo-store-frontend/src/pages/about.astro
+++ b/robo-store-frontend/src/pages/about.astro
@@ -4,5 +4,5 @@ import Layout from "@/layouts/default.astro";
 ---
 
 <Layout title="About Us">
-  <Aboutus client:idle />
+  <Aboutus client:load />
 </Layout>
