--- a/robo-store-frontend/src/pages/index.astro
+++ b/robo-store-frontend/src/pages/index.astro
@@ -14,6 +14,6 @@ import Hero from "@/components/hero.svelte";
   <Introduction client:load />
 
   <section id="shop" class="my-10">
-    <Shop client:idle />
+    <Shop client:load />
   </section>
 </Layout>
