--- a/robo-store-frontend/src/pages/store.astro
+++ b/robo-store-frontend/src/pages/store.astro
@@ -4,5 +4,5 @@ import Layout from "@/layouts/default.astro";
 ---
 
 <Layout title="Our Products">
-  <Shop client:idle />
+  <Shop client:load />
 </Layout>
