--- a/robo-store-frontend/src/layouts/default.astro
+++ b/robo-store-frontend/src/layouts/default.astro
@@ -10,11 +10,15 @@ const { title = "Home" } = Astro.props;
 
 <html lang="en">
   <head>
-    <Head title={title} />
     <ViewTransitions transition:animate="fade" />
     <script>
       import { User } from "@/store/user";
-      import { storeDetails, storeProducts, isLoading } from "@/store/basics";
+      import {
+        storeDetails,
+        storeProducts,
+        isLoading,
+        cart,
+      } from "@/store/basics";
 
       const fetchUser = new Promise(async (resolve) => {
         const response = await fetch("/api/@me");
@@ -43,14 +47,19 @@ const { title = "Home" } = Astro.props;
       });
 
       Promise.all([fetchUser, fetchStore, fetchProducts])
-
         .catch((error) => {
           console.error("Error in one or more requests:", error);
         })
         .finally(() => isLoading.set(false));
-    </script></head
-  >
 
+      if (!localStorage.getItem("cartItems")) {
+        localStorage.setItem("cartItems", "[]");
+      } else {
+        cart.set(JSON.parse(localStorage.getItem("cartItems")!));
+      }
+    </script>
+  </head>
+  <Head title={title} />
   <body class="overflow-x-hidden min-h-screen bg-black text-white">
     <header
       class="fixed overflow-x-hidden w-screen grid place-items-center top-1 z-[500]"
@@ -88,6 +97,16 @@ const { title = "Home" } = Astro.props;
 
     ::-webkit-scrollbar {
       display: none;
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    input[type="number"] {
+      -moz-appearance: textfield;
     }
   </style>
 </html>
