--- a/robo-store-frontend/src/layouts/default.astro
+++ b/robo-store-frontend/src/layouts/default.astro
@@ -2,7 +2,6 @@
 import Navbar from "@/components/navbar.svelte";
 import Menu from "@/components/menu.svelte";
 import Intiailizing from "@/components/intiailizing.svelte";
-import Head from "@/components/head.svelte";
 import { ViewTransitions } from "astro:transitions";
 
 const { title = "Home" } = Astro.props;
@@ -33,6 +32,9 @@ const { title = "Home" } = Astro.props;
         if (response.ok) {
           const data = await response.json();
           storeDetails.set(data);
+          window.document.title =
+            window.document.title.split("|")[0] +
+            ` | ${storeDetails.value.store_name}`;
         }
         resolve(response);
       });
@@ -57,9 +59,22 @@ const { title = "Home" } = Astro.props;
       } else {
         cart.set(JSON.parse(localStorage.getItem("cartItems")!));
       }
+
+      document.addEventListener("astro:page-load", () => {
+        window.document.title =
+          window.document.title.split("|")[0] +
+          ` | ${storeDetails.value.store_name}`;
+      });
     </script>
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 256 256'%3E%3Cpath fill='%23ffffff' d='M231.69 93.81L217.35 43.6A16.07 16.07 0 0 0 202 32H54a16.07 16.07 0 0 0-15.35 11.6L24.31 93.81A8 8 0 0 0 24 96v16a40 40 0 0 0 16 32v72a8 8 0 0 0 8 8h160a8 8 0 0 0 8-8v-72a40 40 0 0 0 16-32V96a8 8 0 0 0-.31-2.19M88 112a24 24 0 0 1-35.12 21.26a8 8 0 0 0-1.82-1.06A24 24 0 0 1 40 112v-8h48Zm64 0a24 24 0 0 1-48 0v-8h48Zm64 0a24 24 0 0 1-11.07 20.2a8 8 0 0 0-1.8 1.05A24 24 0 0 1 168 112v-8h48Z'/%3E%3C/svg%3E"
+    />
+    <meta name="viewport" content="width=device-width" />
+    <title>{title}</title>
   </head>
-  <Head title={title} />
   <body class="overflow-x-hidden min-h-screen bg-black text-white">
     <header
       class="fixed overflow-x-hidden w-screen grid place-items-center top-1 z-[500]"
