--- a/robo-store-frontend/src/pages/product.astro
+++ b/robo-store-frontend/src/pages/product.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/default.astro";
 import ProductPage from "@/components/product.svelte";
 ---
 
-<Layout>
+<Layout title="Product View">
   <ProductPage client:load />
   <Layout /></Layout
 >
